--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "MX_Alps_Hybrid"]
 	path = MX_Alps_Hybrid
 	url = https://github.com/ai03-2725/MX_Alps_Hybrid.git
+[submodule "kicad-footprints"]
+	path = kicad-footprints
+	url = https://github.com/KiCad/kicad-footprints.git
